simple flow - display articles and save new one

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,16 +10,25 @@
 <table id="inventory">
 	<caption>Inventory</caption>
 	<thead>
-
 	<tr>
+		<th>Id</th>
 		<th>Article</th>
 		<th>Amount</th>
 		<th>Use by</th>
 	</tr>
 	</thead>
-	<tbody>
-
-	</tbody>
+	<tbody></tbody>
+</table>
+<table id="shopping-list">
+	<caption>Shopping list</caption>
+	<thead>
+	<tr>
+		<th>Id</th>
+		<th>Article</th>
+		<th>Amount</th>
+	</tr>
+	</thead>
+	<tbody></tbody>
 </table>
 <table id="articles">
 	<caption>Articles</caption>
@@ -29,9 +38,7 @@
 		<th>Name</th>
 	</tr>
 	</thead>
-	<tbody>
-
-	</tbody>
+	<tbody></tbody>
 </table>
 <form action="/articles" method="post">
 	<label for="article">
