--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -41,6 +41,7 @@
 	<tbody></tbody>
 </table>
 <form action="/articles" method="post">
+	<!--todo action-->
 	<label for="article">
 		Add article to database
 	</label>
