--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -14,23 +14,18 @@
 		<tr>
 			<th>Id</th>
 			<th>Name</th>
+			<th>Action</th>
 		</tr>
 		</thead>
 		<tbody></tbody>
 	</table>
 	<!--needed form tag?-->
 	<!--<form>-->
-	<label for="article-id">
-		Article id
-	</label>
-	<input type="text" name="name" id="article-id">
 	<label for="article-name">
 		Article name
 	</label>
 	<input type="text" name="name" id="article-name" placeholder="zB. Kartoffelsalat">
 	<button onclick="addArticle()">add</button>
-	<button onclick="editArticle()">edit</button>
-	<button onclick="deleteArticle()">delete</button>
 	<!--</form>-->
 </div>
 <div>
