--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -54,11 +54,15 @@
 			<th>
 				<select id="inventory-article-select"></select>
 			</th>
-			<th><input type="number" id="inventory-article-amount" min="1" max="99" value="1"></th>
-			<th><input type="date" id="inventory-article-use-by"></th>
-			<th>
-				<button onclick="addInventoryArticle()">add</button>
-			</th>
+			<form>
+				<th>
+					<input type="number" id="inventory-article-amount" min="1" max="99" value="1">
+				</th>
+				<th><input type="date" id="inventory-article-use-by"></th>
+				<th>
+					<button onclick="addInventoryArticle()">add</button>
+				</th>
+			</form>
 		</tr>
 		</thead>
 		<tbody></tbody>
