--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -98,7 +98,7 @@
 		<tr>
 			<th></th>
 			<th>
-				<input id="shopping-list-article-select">
+				<input id="shopping-list-article-select" onchange="validateShoppingListAddForm()">
 			</th>
 			<th><input type="number" id="shopping-list-article-amount" min="1" max="99" value="1"
 					   onmouseup="validateShoppingListAddForm()" onkeyup="validateShoppingListAddForm()">
