--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,11 +10,11 @@
 <body>
 <header>T<img id="egg" src="logo_egg.png">Pgrocery</header>
 <div id="navigation">
-	<a href="#inventory"> Inventory</a>
+	<a class="navigation-link" href="#inventory"> Inventory</a>
 	|
-	<a href="#shopping-list"> Shopping</a>
+	<a class="navigation-link" href="#shopping-list"> Shopping</a>
 	|
-	<a href="#articles">Articles</a>
+	<a class="navigation-link" href="#articles">Articles</a>
 </div>
 <div id="articles">
 	<table>
