--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -8,7 +8,7 @@
 	<script src="index.js"></script>
 </head>
 <body>
-<header>T<img id="egg" src="logo_egg.png">Pgrocery</header>
+<header>T<img id="egg" src="logo_egg.png">Pgrocery ver0.2</header>
 <div id="navigation">
 	<a class="navigation-link" href="#inventory"> Inventory</a>
 	|
